# data-scraping

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/: 0001_init_list_am.sql  20260102194512_add_missing_columns_to_list_am_houses.sql  20260102203650_fix_list_am_type_mismatches.sql  20260103121547_add_list_am_phones.sql  20260103132805_add_list_sources.sql  20260103143512_add_rental_extra_columns.sql  20260103192526_add_unique_index.sql  20260110114424_deleted_at.sql
src/: config.rs  main.rs  scheduler.rs
src/checker/: service.rs
src/crawler/: fetcher.rs  mod.rs  models.rs  parser.rs  service.rs
src/storage/: postgres.rs
