[package]
name = "data-scraping"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.13.0", features = ["json", "gzip", "brotli"] }
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0.96"
dotenvy = "0.15"
regex = "1.10"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "migrate",
  "chrono"
] }
